assets/css/styles.css
/* imports the 'Monoton' font from google fonts */
@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');

/* color variables */
:root {
    --color-header: #FF1414;
    --color-2: #8F2D56;
    --color-3: #218380;
    --color-4: #FBB13C;
    --color-5: #73D2DE;
}

html {
    /* (62.5% of 16px) == 10px == 1rem */
    font-size: 62.5%;
}

body {
    background: rgb(162, 123, 94);
    background: linear-gradient(171deg, rgba(162, 123, 94, 0.9948354341736695) 30%, rgba(231, 226, 220, 1) 100%);
    /* background-size: auto; */
}

main {
    width: 95%;
    height: 69rem;
    margin: 2rem auto 1rem auto;
    background-color: #ffffff4D;
    /* background-color: yellow; */
    padding: .5rem 0rem;
    border-radius: 10px;
    box-shadow: 5px 10px 18px #888888;
}

h1 {
    font-family: 'Monoton', cursive, serif;
    color: var(--color-header);
    letter-spacing: 1rem;
    font-size: 4.2rem;
    font-weight: normal;
    line-height: 3.8rem;
    text-align: center;
    background-color: #ffffff80;
    align-self: center;
    padding: .5rem;
}

/* >>> start <header> //////////////////////////////////////////////////////////////////////////////////////////////// */
.header-dice {
    height: 2.5rem;
    width: auto;
}

header {
    background-image: url(../images/dice-background_cut-wider.webp);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    height: 14rem;
    display: flex;
    justify-content: center;
}

/* <<< end <header> //////////////////////////////////////////////////////////////////////////////////////////////////// */
.lock-container,
.dice-container,
.game-buttons {
    display: flex;
    justify-content: center;
    gap: 1rem;
    padding-top: .5rem;
}

.game-buttons {
    gap: 0;
}

.game-buttons button {
    margin: .3rem;
    border: 0.4rem outset lightgrey;
    background-color: #ffffff80;
    border-radius: 10px;
    color: var(--color-header);
    font-family: 'Monoton', cursive, serif;
    letter-spacing: 0.1rem;
    font-size: 1.2rem;
    font-weight: 600;
    box-shadow: 5px 8px 12px #888888;
    padding: 0.3rem;
}

.game-buttons button:hover {
    font-size: 1.4rem;
    margin: 0;
}

#lock-1:hover,
#lock-2:hover,
#lock-3:hover,
#lock-4:hover,
#lock-5:hover {
    width: 52.2px;
    height: 52.2px;
    margin: 1px 0;
    margin-bottom: 5px;
}

.lock-container img {
    margin: 5px 1px;
    margin-bottom: 5px;
    height: 48px;
    width: 48px;
}

/* >>> start <table> ///////////////////////////////////////////////////////////////////////////////////////////////////// */
table {
    margin: 1rem auto .3rem auto;
    background-image: url(../images/papper.webp);
    background-position: center;
    background-size: cover;
    box-shadow: 5px 10px 18px #888888;
}

table,
td,
th {
    border: solid rgb(162, 123, 94) 1px;
    border-collapse: collapse;
    text-align: center;
    font-size: 1.5rem;
}

table,
.noBorder {
    border: none;
}

#table-player-name {
    vertical-align: bottom;
}

.textOriantation {
    writing-mode: vertical-rl;
    text-orientation: sideways-right;
    font-size: 2rem;
    letter-spacing: 0.2rem;
    width: .6rem;
}

#grandTotal {
    text-decoration: underline;
    font-weight: bolder;
    letter-spacing: 0.1rem;
}

.table-button {
    width: 4rem;
    height: 2rem;
}

#cpuText {
    background-color: #fff;
    border-radius: 1rem;
    max-width: 94%;
    text-align: center;
    padding: .5rem 2rem;
    margin: 1.5rem auto 0.5rem auto;
    font-size: 1.5rem;
    width: fit-content;
    height: 5rem;
}

.noDisplay {
    visibility: hidden;
}

.table-button--flash {
    /* https://codepen.io/arximughal/pen/LEpoOJ */
    background-color: #004A7F;
    width: 4rem;
    height: 1.9rem;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    border: none;
    color: #FFFFFF;
    cursor: pointer;
    display: inline-block;
    font-family: Arial;
    font-size: 1.5rem;
    /* padding: 5px 10px; */
    text-align: center;
    text-decoration: none;
    -webkit-animation: glowing 1500ms infinite;
    -moz-animation: glowing 1500ms infinite;
    -o-animation: glowing 1500ms infinite;
    animation: glowing 1500ms infinite;
}

@-webkit-keyframes glowing {
    0% {
        background-color: #B20000;
        -webkit-box-shadow: 0 0 3px #B20000;
    }

    50% {
        background-color: #FF0000;
        -webkit-box-shadow: 0 0 40px #FF0000;
    }

    100% {
        background-color: #B20000;
        -webkit-box-shadow: 0 0 3px #B20000;
    }
}

@-moz-keyframes glowing {
    0% {
        background-color: #B20000;
        -moz-box-shadow: 0 0 3px #B20000;
    }

    50% {
        background-color: #FF0000;
        -moz-box-shadow: 0 0 40px #FF0000;
    }

    100% {
        background-color: #B20000;
        -moz-box-shadow: 0 0 3px #B20000;
    }
}

@-o-keyframes glowing {
    0% {
        background-color: #B20000;
        box-shadow: 0 0 3px #B20000;
    }

    50% {
        background-color: #FF0000;
        box-shadow: 0 0 40px #FF0000;
    }

    100% {
        background-color: #B20000;
        box-shadow: 0 0 3px #B20000;
    }
}

@keyframes glowing {
    0% {
        background-color: #B20000;
        box-shadow: 0 0 3px #B20000;
    }

    50% {
        background-color: #FF0000;
        box-shadow: 0 0 40px #FF0000;
    }

    100% {
        background-color: #B20000;
        box-shadow: 0 0 3px #B20000;
    }
}

.robot {
    height: 60px;
    width: 60px;
}

.player-flash {
    background-color: #004A7F;
    -webkit-border-radius: 10px;
    border-radius: 10px;
    border: none;
    color: #FFFFFF;
    cursor: pointer;
    display: inline-block;
    font-family: Arial;
    font-size: 1.5rem;
    /* padding: 5px 10px; */
    text-align: center;
    text-decoration: none;
    -webkit-animation: glowing 1500ms infinite;
    -moz-animation: glowing 1500ms infinite;
    -o-animation: glowing 1500ms infinite;
    animation: glowing 1500ms infinite;
}

/* <<< end <table> ///////////////////////////////////////////////////////////////////////////////////////////////////// */

@media only screen and (min-width: 37.5rem) {
    main {
        height: 99.5rem;
    }

    .game-buttons button {
        /* font-size: 1.2rem; */
        font-size: 2rem;
        padding: 1rem;
    }

    .game-buttons button:hover {
        font-size: 2.2rem;
        margin: 0;
    }

    table,
    td,
    th {
        /* font-size: 1.5rem; */
        font-size: 2rem;
    }

    td,
    th {
        padding: 0.3rem 1rem;
    }

    .table-button {
        width: 4rem;
        height: 2.5rem;
        margin: 0.3rem
    }

    .table-button--flash,
    .player-flash {
        font-size: 2rem;
        margin-bottom: .4rem;
    }

    .lock-container,
    .dice-container,
    .game-buttons {
        gap: 4rem;
        padding-top: 1rem;
    }

}

